--- a/features/main/src/main/res/layout/item_humor_card.xml
+++ b/features/main/src/main/res/layout/item_humor_card.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="humorItem"
-            type="com.az.main.TempHumorData" />
+            type="com.az.model.posts.PostData" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -33,7 +33,7 @@
                 android:gravity="center"
                 android:paddingHorizontal="7dp"
                 android:paddingVertical="4dp"
-                android:text="@{humorItem.grade}"
+                android:text="@{humorItem.authorNickname}"
                 android:textColor="@color/colorWhite"
                 android:textSize="12sp"
                 android:textStyle="bold"
@@ -48,16 +48,16 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="12dp"
                 android:layout_marginTop="17dp"
-                android:layout_marginBottom="15dp"
                 android:layout_marginEnd="30dp"
-                android:text="@{humorItem.user}"
+                android:layout_marginBottom="15dp"
+                android:text="@{humorItem.authorNickname}"
                 android:textColor="@color/colorDarkGrey"
                 android:textSize="13sp"
                 android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@id/date"
                 app:layout_constraintStart_toEndOf="@id/user_grade"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
                 tools:text="가나다" />
 
             <TextView
@@ -65,7 +65,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="20dp"
-                android:text="@{humorItem.date}"
+                android:text="@{humorItem.createdDate}"
                 android:textColor="@color/colorDarkGrey"
                 android:textSize="12sp"
                 app:layout_constraintBottom_toBottomOf="@id/user_name"
@@ -95,12 +95,12 @@
             android:id="@+id/heart"
             android:layout_width="18dp"
             android:layout_height="17dp"
+            android:layout_marginStart="20dp"
             android:layout_marginBottom="14dp"
             android:scaleType="fitCenter"
             android:src="@drawable/ic_heart"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="20dp"
             app:layout_goneMarginStart="30dp" />
 
         <TextView
@@ -108,7 +108,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="2dp"
-            android:text="@{@string/count(humorItem.heart)}"
+            android:text="@{@string/count(humorItem.likes)}"
             android:textColor="@color/colorDarkGrey"
             android:textSize="12sp"
             android:textStyle="bold"
@@ -131,7 +131,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="3dp"
-            android:text="@{@string/count(humorItem.comment)}"
+            android:text="@{@string/count(humorItem.comments)}"
             android:textColor="@color/colorDarkGrey"
             android:textSize="12sp"
             android:textStyle="bold"
