--- a/features/main/src/main/res/layout/bottom_sheet_main.xml
+++ b/features/main/src/main/res/layout/bottom_sheet_main.xml
@@ -8,7 +8,7 @@
 
         <variable
             name="humors"
-            type="java.util.List&lt;com.az.main.TempHumorData&gt;" />
+            type="java.util.List&lt;com.az.model.posts.PostData&gt;" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -68,6 +68,7 @@
             android:layout_height="wrap_content"
             android:background="@color/colorGrey"
             android:clipToPadding="false"
+            android:fitsSystemWindows="true"
             android:paddingTop="12dp"
             android:paddingBottom="85dp"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
@@ -75,7 +76,6 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/humor_sheet_divider"
             bind:setItems="@{humors}"
-            android:fitsSystemWindows="true"
             tools:listitem="@layout/item_humor_card" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
