--- a/features/main/src/main/res/layout/item_humor_card_fame.xml
+++ b/features/main/src/main/res/layout/item_humor_card_fame.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="humorItem"
-            type="com.az.main.TempHumorData" />
+            type="com.az.model.posts.PostData" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -33,7 +33,7 @@
                 android:gravity="center"
                 android:paddingHorizontal="7dp"
                 android:paddingVertical="4dp"
-                android:text="@{humorItem.grade}"
+                android:text="@{humorItem.authorNickname}"
                 android:textColor="@color/colorWhite"
                 android:textSize="12sp"
                 android:textStyle="bold"
@@ -50,7 +50,7 @@
                 android:layout_marginTop="17dp"
                 android:layout_marginEnd="30dp"
                 android:layout_marginBottom="15dp"
-                android:text="@{humorItem.user}"
+                android:text="@{humorItem.authorNickname}"
                 android:textColor="@color/colorWhite"
                 android:textSize="13sp"
                 android:textStyle="bold"
@@ -74,7 +74,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="20dp"
-                android:text="@{humorItem.date}"
+                android:text="@{humorItem.createdDate}"
                 android:textColor="@color/colorWhite"
                 android:textSize="12sp"
                 app:layout_constraintBottom_toBottomOf="@id/user_name"
@@ -117,7 +117,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="2dp"
-            android:text="@{@string/count(humorItem.heart)}"
+            android:text="@{@string/count(humorItem.likes)}"
             android:textColor="@color/colorDarkGrey"
             android:textSize="12sp"
             android:textStyle="bold"
@@ -140,7 +140,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="3dp"
-            android:text="@{@string/count(humorItem.comment)}"
+            android:text="@{@string/count(humorItem.comments)}"
             android:textColor="@color/colorDarkGrey"
             android:textSize="12sp"
             android:textStyle="bold"
