YTG-#26 [컬러][리소스] app 모듈의 이미지 리소스 정리

--- a/app/src/main/res/layout/backspace_toolbar.xml
+++ b/app/src/main/res/layout/backspace_toolbar.xml
@@ -1,17 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="85dp"
-    android:background="@color/colorDarkGrey"
-    android:paddingStart="31dp">
+    android:layout_height="57dp"
+    android:background="@color/colorSemiBlack"
+    android:paddingStart="31dp"
+    android:paddingEnd="23dp">
 
     <ImageView
         android:id="@+id/img_backspace_back_button"
         android:layout_width="wrap_content"
-        android:layout_height="32dp"
-        android:layout_marginTop="32dp"
-        android:src="@drawable/back_button"
+        android:layout_height="14dp"
+        android:src="@drawable/ic_back_button"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -19,28 +21,28 @@
         android:id="@+id/txt_backspace_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="17dp"
-        android:layout_marginTop="32dp"
         android:textColor="@color/colorWhite"
-        android:textSize="25sp"
-        app:layout_constraintStart_toEndOf="@+id/img_backspace_back_button"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="알림" />
 
     <LinearLayout
         android:id="@+id/layout_backspace_close_button_wrap"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="31dp"
-        android:layout_marginEnd="31dp"
         android:visibility="gone"
-        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
             android:id="@+id/img_close_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/delete_button" />
+            android:src="@drawable/ic_close_button" />
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
