YTG-#26 [컬러][리소스] app 모듈의 이미지 리소스 이름 수정에 따른 사이드 이펙트 정리

--- a/features/alarm/src/main/res/layout/item_alarm.xml
+++ b/features/alarm/src/main/res/layout/item_alarm.xml
@@ -13,7 +13,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorDarkGrey"
+        android:background="@color/colorSemiBlack"
         android:paddingVertical="22dp"
         android:paddingStart="30dp"
         android:paddingEnd="68dp">
