--- a/features/main/src/main/res/drawable/bg_humor_card_title.xml
+++ b/features/main/src/main/res/drawable/bg_humor_card_title.xml
@@ -7,5 +7,5 @@
         android:bottomRightRadius="0dp"
         android:topLeftRadius="50dp"
         android:topRightRadius="50dp" />
-    <solid android:color="@color/colorGrey" />
+    <solid android:color="@color/colorDarkGray" />
 </shape>
