--- a/features/main/src/main/res/layout/item_humor_card.xml
+++ b/features/main/src/main/res/layout/item_humor_card.xml
@@ -35,7 +35,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="17dp"
             android:text="@{humorItem.user}"
-            android:textColor="@color/colorDarkGrey"
+            android:textColor="@color/colorSemiBlack"
             android:textSize="15sp"
             android:textStyle="bold"
             app:layout_constraintStart_toEndOf="@id/crown"
@@ -49,7 +49,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:text="@{humorItem.date}"
-            android:textColor="@color/colorDarkGrey"
+            android:textColor="@color/colorSemiBlack"
             android:textSize="13sp"
             app:layout_constraintBottom_toBottomOf="@id/user_name"
             app:layout_constraintStart_toEndOf="@id/user_name"
@@ -62,7 +62,7 @@
             android:layout_marginBottom="55dp"
             android:gravity="center"
             android:text="@{humorItem.content}"
-            android:textColor="@color/colorMiddleGrey"
+            android:textColor="@color/colorSemiBlack"
             android:textSize="35sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@id/comment_count"
@@ -88,7 +88,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="2dp"
             android:text="@{@string/count(humorItem.heart)}"
-            android:textColor="@color/colorDarkGrey"
+            android:textColor="@color/colorSemiBlack"
             android:textSize="12sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="@id/heart"
@@ -111,7 +111,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="3dp"
             android:text="@{@string/count(humorItem.comment)}"
-            android:textColor="@color/colorDarkGrey"
+            android:textColor="@color/colorSemiBlack"
             android:textSize="12sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="@id/heart_count"
