--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,13 +2,13 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorDarkGrey</item>
+        <item name="colorPrimary">@color/colorSemiBlack</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
     <style name="NoTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <item name="colorPrimary">@color/colorDarkGrey</item>
+        <item name="colorPrimary">@color/colorSemiBlack</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
 
@@ -17,7 +17,7 @@
     </style>
 
     <style name="Theme.Az.ActionBar" parent="NoTheme">
-        <item name="android:colorBackground">@color/colorDarkGrey</item>
+        <item name="android:colorBackground">@color/colorSemiBlack</item>
         <item name="android:textColorSecondary">@color/colorWhite</item>
     </style>
 
