--- a/features/details/src/main/res/layout/item_comments.xml
+++ b/features/details/src/main/res/layout/item_comments.xml
@@ -13,7 +13,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorDarkGrey"
+        android:background="@color/colorSemiBlack"
         android:paddingHorizontal="30dp"
         android:paddingVertical="12dp">
 
