--- a/features/main/src/main/res/drawable/bg_humor_card_bar.xml
+++ b/features/main/src/main/res/drawable/bg_humor_card_bar.xml
@@ -3,5 +3,5 @@
     android:shape="rectangle">
 
     <corners android:radius="20dp" />
-    <solid android:color="@color/colorGreyGrey" />
+    <solid android:color="@color/colorCoolGray" />
 </shape>
