--- a/features/main/src/main/res/layout/bottom_sheet_main.xml
+++ b/features/main/src/main/res/layout/bottom_sheet_main.xml
@@ -56,7 +56,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="22dp"
-            android:background="@color/colorGrey"
+            android:background="@color/colorDarkGray"
             android:clipToPadding="false"
             android:paddingBottom="85dp"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
