--- a/features/main/src/main/res/layout/fragment_main.xml
+++ b/features/main/src/main/res/layout/fragment_main.xml
@@ -14,7 +14,7 @@
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/colorDarkGrey">
+        android:background="@color/colorSemiBlack">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
