--- a/features/details/src/main/res/layout/layout_contents_detail.xml
+++ b/features/details/src/main/res/layout/layout_contents_detail.xml
@@ -63,7 +63,7 @@
             android:layout_height="0.4dp"
             android:layout_marginHorizontal="21dp"
             android:layout_marginTop="40dp"
-            android:background="@color/colorGrey"
+            android:background="@color/colorDarkGray"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/content_detail" />
