YTG-#26 [폰트][리소스] 폰트 리소스 추가 및 수정

--- a/features/details/src/main/res/layout/item_comments.xml
+++ b/features/details/src/main/res/layout/item_comments.xml
@@ -31,6 +31,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="9dp"
+            android:fontFamily="@font/app_main_font"
             android:text="신입 가나다님"
             android:textColor="@color/colorWhite"
             android:textSize="15sp"
@@ -43,6 +44,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
+            android:fontFamily="@font/app_main_font"
             android:text="ㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋ"
             android:textColor="@color/colorWhite"
             android:textSize="15sp"
