--- a/features/alarm/src/main/res/layout/item_alarm.xml
+++ b/features/alarm/src/main/res/layout/item_alarm.xml
@@ -20,13 +20,17 @@
 
         <TextView
             android:id="@+id/alarm_btn"
-            android:layout_width="55dp"
-            android:layout_height="24dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:background="@drawable/bg_alarm_button"
-            android:gravity="center"
+            android:fontFamily="@font/app_main_font"
+            android:gravity="center_vertical|center_horizontal"
+            android:paddingHorizontal="12dp"
+            android:paddingVertical="6dp"
             android:text="좋아요"
             android:textColor="@color/colorWhite"
             android:textSize="12sp"
+            android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -36,6 +40,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="12dp"
             android:layout_marginEnd="4dp"
+            android:fontFamily="@font/app_main_font"
             android:gravity="center_vertical"
             android:text="@{alarmItem.title}"
             android:textColor="@color/colorWhite"
@@ -50,6 +55,8 @@
             android:id="@+id/alarm_content"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginTop="6dp"
+            android:fontFamily="@font/app_main_font"
             android:gravity="center_vertical"
             android:text="@{alarmItem.content}"
             android:textColor="@color/colorWhite"
@@ -63,6 +70,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
+            android:fontFamily="@font/app_main_font"
             android:gravity="center_vertical"
             android:text="@{alarmItem.time}"
             android:textColor="@color/colorWhite"
