--- a/features/create/src/main/res/layout/fragment_create.xml
+++ b/features/create/src/main/res/layout/fragment_create.xml
@@ -25,6 +25,7 @@
             android:layout_height="0dp"
             android:layout_marginBottom="30dp"
             android:background="@drawable/bg_create_humor"
+            android:fontFamily="@font/sdgnh"
             android:gravity="center"
             android:hint="100자이내\n입력 부탁이용"
             android:lineSpacingExtra="5sp"
@@ -32,7 +33,6 @@
             android:padding="30dp"
             android:textColor="@color/colorBlack"
             android:textSize="35sp"
-            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="@id/guide"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
