--- a/features/main/src/main/res/layout/bottom_sheet_main.xml
+++ b/features/main/src/main/res/layout/bottom_sheet_main.xml
@@ -35,6 +35,7 @@
             android:layout_marginStart="30dp"
             android:layout_marginTop="32dp"
             android:text="@string/humors_list_title"
+            android:fontFamily="@font/app_main_font"
             android:textColor="@color/colorWhite"
             android:textSize="16sp"
             android:textStyle="bold"
