--- a/app/src/main/res/layout/backspace_toolbar.xml
+++ b/app/src/main/res/layout/backspace_toolbar.xml
@@ -21,6 +21,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="17dp"
         android:layout_marginTop="32dp"
+        android:fontFamily="@font/sdgnh"
         android:textColor="@color/colorWhite"
         android:textSize="25sp"
         app:layout_constraintStart_toEndOf="@+id/img_backspace_back_button"
