--- a/features/details/src/main/res/layout/layout_contents_detail.xml
+++ b/features/details/src/main/res/layout/layout_contents_detail.xml
@@ -48,7 +48,7 @@
             android:layout_marginTop="33dp"
             android:gravity="center"
             android:text="@{detail.content}"
-            android:textColor="@color/colorBlack"
+            android:textColor="@color/colorSemiBlack"
             android:textSize="35sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@id/divider_details"
@@ -63,7 +63,7 @@
             android:layout_height="0.4dp"
             android:layout_marginHorizontal="21dp"
             android:layout_marginTop="40dp"
-            android:background="@color/colorGrey"
+            android:background="@color/colorDarkGray"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/content_detail" />
@@ -86,7 +86,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="2dp"
             android:text="@{@string/count(detail.heart)}"
-            android:textColor="@color/colorBlack"
+            android:textColor="@color/colorSemiBlack"
             android:textSize="12sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="@id/ic_heart"
@@ -111,7 +111,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
             android:text="@{@string/count(detail.comment)}"
-            android:textColor="@color/colorBlack"
+            android:textColor="@color/colorSemiBlack"
             android:textSize="12sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="@id/ic_heart"
@@ -128,7 +128,7 @@
             android:layout_marginEnd="20dp"
             android:gravity="end"
             android:text="@{detail.user}"
-            android:textColor="@color/colorBlack"
+            android:textColor="@color/colorSemiBlack"
             android:textSize="14sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
@@ -143,7 +143,7 @@
             android:layout_marginTop="2dp"
             android:layout_marginBottom="16dp"
             android:text="@{detail.time}"
-            android:textColor="@color/colorBlack"
+            android:textColor="@color/colorSemiBlack"
             android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@id/user"
