--- a/features/details/src/main/res/layout/layout_contents_detail.xml
+++ b/features/details/src/main/res/layout/layout_contents_detail.xml
@@ -46,11 +46,12 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="32dp"
             android:layout_marginTop="33dp"
+            android:fontFamily="@font/sdgnh"
             android:gravity="center"
+            android:lineSpacingExtra="5sp"
             android:text="@{detail.content}"
             android:textColor="@color/colorSemiBlack"
             android:textSize="35sp"
-            android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@id/divider_details"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -85,6 +86,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="2dp"
+            android:fontFamily="@font/app_main_font"
             android:text="@{@string/count(detail.heart)}"
             android:textColor="@color/colorSemiBlack"
             android:textSize="12sp"
@@ -110,6 +112,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
+            android:fontFamily="@font/app_main_font"
             android:text="@{@string/count(detail.comment)}"
             android:textColor="@color/colorSemiBlack"
             android:textSize="12sp"
@@ -126,6 +129,7 @@
             android:layout_marginStart="10dp"
             android:layout_marginTop="14dp"
             android:layout_marginEnd="20dp"
+            android:fontFamily="@font/app_main_font"
             android:gravity="end"
             android:text="@{detail.user}"
             android:textColor="@color/colorSemiBlack"
@@ -142,6 +146,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="2dp"
             android:layout_marginBottom="16dp"
+            android:fontFamily="@font/app_main_font"
             android:text="@{detail.time}"
             android:textColor="@color/colorSemiBlack"
             android:textSize="12sp"
