--- a/features/main/src/main/res/layout/item_humor_card.xml
+++ b/features/main/src/main/res/layout/item_humor_card.xml
@@ -34,6 +34,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="17dp"
+            android:fontFamily="@font/app_main_font"
             android:text="@{humorItem.user}"
             android:textColor="@color/colorSemiBlack"
             android:textSize="15sp"
@@ -48,6 +49,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
+            android:fontFamily="@font/app_main_font"
             android:text="@{humorItem.date}"
             android:textColor="@color/colorSemiBlack"
             android:textSize="13sp"
@@ -60,11 +62,12 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="66dp"
             android:layout_marginBottom="55dp"
+            android:fontFamily="@font/sdgnh"
             android:gravity="center"
+            android:lineSpacingExtra="5sp"
             android:text="@{humorItem.content}"
             android:textColor="@color/colorSemiBlack"
             android:textSize="35sp"
-            android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@id/comment_count"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -87,6 +90,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="2dp"
+            android:fontFamily="@font/app_main_font"
             android:text="@{@string/count(humorItem.heart)}"
             android:textColor="@color/colorSemiBlack"
             android:textSize="12sp"
@@ -110,6 +114,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="3dp"
+            android:fontFamily="@font/app_main_font"
             android:text="@{@string/count(humorItem.comment)}"
             android:textColor="@color/colorSemiBlack"
             android:textSize="12sp"
