--- a/app/src/main/res/layout/backspace_toolbar.xml
+++ b/app/src/main/res/layout/backspace_toolbar.xml
@@ -3,16 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="58dp"
-    android:background="@color/colorDarkGrey"
-    android:paddingStart="30dp">
+    android:layout_height="54dp"
+    android:background="@color/colorSemiBlack">
 
     <ImageView
         android:id="@+id/img_backspace_back_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="18dp"
-        android:src="@drawable/back_button"
+        android:layout_marginStart="30dp"
+        android:src="@drawable/ic_back_button"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -20,13 +20,13 @@
         android:id="@+id/txt_backspace_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
         android:textColor="@color/colorWhite"
         android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:text="알림"/>
+        tools:text="알림" />
 
     <LinearLayout
         android:id="@+id/layout_backspace_close_button_wrap"
