--- a/features/login/src/main/res/layout/fragment_login.xml
+++ b/features/login/src/main/res/layout/fragment_login.xml
@@ -12,7 +12,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/colorDarkGrey">
+        android:background="@color/colorSemiBlack">
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/txt_sub_guide"
@@ -64,12 +64,12 @@
             android:layout_height="52dp"
             android:layout_marginLeft="30dp"
             android:layout_marginRight="30dp"
-            android:backgroundTint="@color/colorDarkLightGrey"
             android:hint="@string/id_placeholder"
             android:paddingBottom="20dp"
             android:text="@={vm.id}"
-            android:textColor="@color/colorDarkLightGrey"
-            android:textColorHint="@color/colorDarkLightGrey"
+            android:textColor="@color/colorWhite"
+            android:textColorHint="@color/colorGray"
+            android:backgroundTint="@color/colorWhite"
             app:layout_constraintBottom_toTopOf="@+id/edt_login_password"
             app:layout_constraintStart_toStartOf="parent" />
 
@@ -81,13 +81,13 @@
             android:layout_marginLeft="30dp"
             android:layout_marginRight="30dp"
             android:layout_marginBottom="58dp"
-            android:backgroundTint="@color/colorDarkLightGrey"
             android:hint="@string/password_placeholder"
             android:inputType="textPassword"
             android:paddingBottom="20dp"
             android:text="@={vm.password}"
-            android:textColor="@color/colorDarkLightGrey"
-            android:textColorHint="@color/colorDarkLightGrey"
+            android:textColor="@color/colorWhite"
+            android:textColorHint="@color/colorGray"
+            android:backgroundTint="@color/colorWhite"
             app:layout_constraintBottom_toTopOf="@+id/btn_login"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
@@ -100,7 +100,7 @@
             android:layout_alignParentEnd="true"
             android:layout_marginTop="10dp"
             android:text="@string/forgot_password"
-            android:textColor="@color/colorDarkLightGrey"
+            android:textColor="@color/colorGray"
             app:layout_constraintEnd_toEndOf="@id/edt_login_password"
             app:layout_constraintTop_toBottomOf="@+id/edt_login_password" />
 
@@ -125,7 +125,7 @@
             android:layout_marginBottom="32dp"
             android:gravity="center"
             android:text="@string/guest_login"
-            android:textColor="@color/colorDarkLightGrey"
+            android:textColor="@color/colorGray"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
