YTG-#22 [비밀번호찾기][페이지 개발] 비밀번호 찾기 페이지 개발 및 연결

--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -31,6 +31,16 @@
             android:id="@+id/action_loginFragment_to_signupFragment"
             app:destination="@id/signupFragment"/>
 
+        <action
+            android:id="@+id/action_loginFragment_to_forgotFragment"
+            app:destination="@id/forgotPasswordFragment"/>
+
+    </fragment>
+
+    <fragment
+        android:id="@+id/forgotPasswordFragment"
+        android:name="com.az.login.view.ForgotPasswordFragment">
+
     </fragment>
 
     <fragment
