--- a/app/src/main/res/layout/backspace_toolbar.xml
+++ b/app/src/main/res/layout/backspace_toolbar.xml
@@ -3,15 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="57dp"
-    android:background="@color/colorSemiBlack"
-    android:paddingStart="31dp"
-    android:paddingEnd="23dp">
+    android:layout_height="54dp"
+    android:background="@color/colorSemiBlack">
 
     <ImageView
         android:id="@+id/img_backspace_back_button"
         android:layout_width="wrap_content"
-        android:layout_height="14dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="30dp"
         android:src="@drawable/ic_back_button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
