--- a/features/main/src/main/res/layout/item_humor_card_fame.xml
+++ b/features/main/src/main/res/layout/item_humor_card_fame.xml
@@ -33,7 +33,7 @@
                 android:gravity="center"
                 android:paddingHorizontal="7dp"
                 android:paddingVertical="4dp"
-                android:text="@{humorItem.authorNickname}"
+                android:text="@{humorItem.author.rating}"
                 android:textColor="@color/colorWhite"
                 android:textSize="12sp"
                 android:textStyle="bold"
@@ -50,7 +50,7 @@
                 android:layout_marginTop="17dp"
                 android:layout_marginEnd="30dp"
                 android:layout_marginBottom="15dp"
-                android:text="@{humorItem.authorNickname}"
+                android:text="@{humorItem.author.nickname}"
                 android:textColor="@color/colorWhite"
                 android:textSize="13sp"
                 android:textStyle="bold"
