YTG-#25 [메인][디자인] item_humor_card 폰트 수정

--- a/features/main/src/main/res/layout/item_humor_card.xml
+++ b/features/main/src/main/res/layout/item_humor_card.xml
@@ -31,6 +31,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
                 android:background="@drawable/bg_humor_grade_button"
+                android:fontFamily="@font/app_main_font"
                 android:gravity="center"
                 android:paddingHorizontal="7dp"
                 android:paddingVertical="4dp"
@@ -51,10 +52,10 @@
                 android:layout_marginTop="17dp"
                 android:layout_marginEnd="30dp"
                 android:layout_marginBottom="15dp"
+                android:fontFamily="@font/sdgnh"
                 android:text="@{humorItem.author.nickname}"
                 android:textColor="@color/colorSemiBlack"
                 android:textSize="13sp"
-                android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@id/date"
                 app:layout_constraintStart_toEndOf="@id/user_grade"
@@ -66,9 +67,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="20dp"
+                android:fontFamily="@font/app_main_font"
                 android:text="@{humorItem.createdDate}"
                 android:textColor="@color/colorSemiBlack"
                 android:textSize="12sp"
+                android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="@id/user_name"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="@id/user_name"
@@ -80,17 +83,17 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="36dp"
+            android:fontFamily="@font/sdgnh"
             android:gravity="center"
             android:maxLength="100"
             android:text="@{humorItem.content}"
             android:textColor="@color/colorSemiBlack"
             android:textSize="35sp"
-            android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@id/comment_count"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/title_humor_card"
-            tools:text="소나무가\n삐지면?" />
+            tools:text="소나무가 삐지면?" />
 
         <ImageView
             android:id="@+id/heart"
@@ -109,6 +112,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="2dp"
+            android:fontFamily="@font/app_main_font"
             android:text="@{@string/count(humorItem.likes)}"
             android:textColor="@color/colorSemiBlack"
             android:textSize="12sp"
@@ -132,6 +136,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="3dp"
+            android:fontFamily="@font/app_main_font"
             android:text="@{@string/count(humorItem.comments)}"
             android:textColor="@color/colorSemiBlack"
             android:textSize="12sp"
